# PomodoroTimer

./: CMakeLists.txt  LICENSE  Readme.md
PomodoroTime/: CMakeLists.txt  PomodoroTime.cpp  PomodoroTime.h
PomodoroTime/App/: App.cpp  App.hpp
PomodoroTime/ClearTerminal/: ClearTerminal.cpp  ClearTermnal.hpp
PomodoroTime/Controller/: ControllerTask.cpp  ControllerTask.hpp
PomodoroTime/Filter/: FilterErrors.cpp
PomodoroTime/ListMusicForSpeck/: Music.cpp
PomodoroTime/Menu/: Menu.cpp  Menu.hpp
PomodoroTime/Models/: Task.cpp  Task.hpp
PomodoroTime/OpenBrowser/: Open.cpp  Open.hpp
PomodoroTime/TimeManagment/: TimeManager.cpp  TimerManager.hpp
PomodoroTime/TimeSound/: TimeSound.cpp  TimeSound.hpp
